--- a/cluster-home/operations/media/radarr-cz/helmrelease.yaml
+++ b/cluster-home/operations/media/radarr-cz/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
               tag: v2.2.0
             env:
               PORT: "7373"
-              URL: "http://radarr-cz.media.svc.cluster.local:7878"
+              URL: "http://radarr-cz-app.media.svc.cluster.local:7878"
               ENABLE_ADDITIONAL_METRICS: "false"
               ENABLE_UNKNOWN_QUEUE_ITEMS: "false"
               APIKEY: ${SECRET_RADARR_CZ_API_KEY}
