--- a/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
@@ -35,10 +35,10 @@ spec:
                         value: "${NETWORK_CIDR_K8S_CLUSTER},${NETWORK_CIDR_K8S_SERVICE},${NETWORK_CIDR_K8S_SERVICE_EXTERNAL},${NETWORK_CIDR_HOST}"
                       - name: VPN_SERVICE_PROVIDER
                         value: ${SECRET_VPN_GATEWAY_PROVIDER}
-                      - name: OPENVPN_USER
-                        value: ${SECRET_VPN_GATEWAY_USER}
-                      - name: OPENVPN_PASSWORD
-                        value: ${SECRET_VPN_GATEWAY_PASSWORD}
+                      - name: VPN_TYPE
+                        value: wireguard
+                      - name: WIREGUARD_PRIVATE_KEY
+                        value: ${SECRET_VPN_GATEWAY_WIREGUARD_PRIVATE_KEY}
                       - name: VPN_PORT_FORWARDING_LISTENING_PORT
                         value: "'${SECRET_VPN_BT_FORWARD_PORT}'"
                       - name: TZ
