--- a/cluster-home/operations/gtd/baikal/pvc.yaml
+++ b/cluster-home/operations/gtd/baikal/pvc.yaml
@@ -9,9 +9,9 @@ metadata:
     app.kubernetes.io/name: baikal
     app.kubernetes.io/instance: baikal
 spec:
-  storageClassName: openebs-jiva-csi-default
+  storageClassName: mayastor-triple
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 512Mi
@@ -26,9 +26,9 @@ metadata:
     app.kubernetes.io/name: baikal
     app.kubernetes.io/instance: baikal
 spec:
-  storageClassName: openebs-jiva-csi-default
+  storageClassName: mayastor-triple
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 512Mi
