--- a/cluster-home/operations/media/sonarr-cz/pvc.yaml
+++ b/cluster-home/operations/media/sonarr-cz/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: sonarr-cz
     app.kubernetes.io/instance: sonarr-cz
 spec:
-  storageClassName: openebs-jiva-csi-default
+  storageClassName: mayastor-triple
   accessModes:
     - ReadWriteOnce
   resources:
