--- a/cluster-home/operations/media/tdarr/pvc.yaml
+++ b/cluster-home/operations/media/tdarr/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: tdarr
     app.kubernetes.io/instance: tdarr
 spec:
-  storageClassName: openebs-jiva-csi-default
+  storageClassName: mayastor-triple
   accessModes:
     - ReadWriteOnce
   resources:
@@ -26,7 +26,7 @@ metadata:
     app.kubernetes.io/name: tdarr
     app.kubernetes.io/instance: tdarr
 spec:
-  storageClassName: openebs-jiva-csi-default
+  storageClassName: mayastor-triple
   accessModes:
     - ReadWriteOnce
   resources:
