--- a/cluster-home/operations/storage/openebs-config/openebs-config.yaml
+++ b/cluster-home/operations/storage/openebs-config/openebs-config.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: openebs
+      namespace: storage
   interval: 5m
   path: "./cluster-home/operations/storage/openebs-config/manifests"
   prune: true
