Fix cert manager monitoring not deploying

--- a/cluster-home/operations/kube-tools/cert-manager/prometheus-rules.yaml
+++ b/cluster-home/operations/kube-tools/cert-manager/prometheus-rules.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cert-manager
-      namespace: kube-tools
+      namespace: flux-system
     - name: kube-prometheus-stack
       namespace: monitoring
   interval: 10m0s
