Make sure CRDs are managed by kube-prometheus-stack

--- a/cluster-home/operations/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/cluster-home/operations/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -16,10 +16,12 @@ spec:
       namespace: storage
   interval: 5m
   install:
+    crds: CreateReplace
     timeout: 15m
     remediation:
       retries: 5
   upgrade:
+    crds: CreateReplace
     timeout: 15m
     remediation:
       retries: 5
