Fix PVC creation for authentik

--- a/cluster-home/operations/security/authentik/helmrelease.yaml
+++ b/cluster-home/operations/security/authentik/helmrelease.yaml
@@ -65,7 +65,7 @@ spec:
         appendonly no
         save ""
       global:
-        defaultStorageClass: openebs-hostpath
+        defaultStorageClass: mayastor-triple
       persistence:
         enabled: false
       redis:
