Remove stuff I don't use

--- a/cluster-home/operations/storage/openebs/helmrelease.yaml
+++ b/cluster-home/operations/storage/openebs/helmrelease.yaml
@@ -32,3 +32,10 @@ spec:
         cpuCount: 1
         coreList:
           - 3
+    metrics:
+      enabled: false
+    loki:
+      enabled: false
+    obs:
+      callhome:
+        enabled: false
