Migrate to longhorn

--- a/cluster-home/infrastructure/talos/patch-controlplane.yaml
+++ b/cluster-home/infrastructure/talos/patch-controlplane.yaml
@@ -13,7 +13,7 @@
           warn-version: "latest"
         exemptions:
           namespaces:
-            - openebs
+            - storage
           runtimeClasses: []
           usernames: []
         kind: PodSecurityConfiguration
