--- a/cluster-home/operations/media/jellyseerr/pvc.yaml
+++ b/cluster-home/operations/media/jellyseerr/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: jellyseerr
     app.kubernetes.io/instance: jellyseerr
 spec:
-  storageClassName: mayastor-triple
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
