--- a/cluster-home/operations/media/lidarr/pvc.yaml
+++ b/cluster-home/operations/media/lidarr/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: lidarr
     app.kubernetes.io/instance: lidarr
 spec:
-  storageClassName: mayastor-triple
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
