--- a/cluster-home/infrastructure/talos/patch-worker.yaml
+++ b/cluster-home/infrastructure/talos/patch-worker.yaml
@@ -1,4 +1,16 @@
 - op: add
+  path: /machine/disks
+  value:
+    - device: /dev/sdb
+      partitions:
+        - mountpoint: /var/lib/longhorn
+- op: add
+  path: /machine/kernel
+  value:
+    modules:
+      - name: nvme_tcp
+      - name: vfio_pci
+- op: add
   path: /machine/kubelet
   value:
     extraMounts:
@@ -10,9 +22,20 @@
           - rshared
           - rw
 - op: add
+  path: /machine/kubelet
+  value:
+    extraMounts:
+      - destination: /var/lib/longhorn
+        type: bind
+        source: /var/lib/longhorn
+        options:
+          - bind
+          - rshared
+          - rw
+- op: add
   path: /machine/nodeLabels
   value:
-    openebs.io/engine: "mayastor"
+    node.longhorn.io/create-default-disk: true
 - op: add
   path: /machine/sysctls
   value:
