--- a/cluster-home/operations/flux-system/dependencies/longhorn.yaml
+++ b/cluster-home/operations/flux-system/dependencies/longhorn.yaml
@@ -2,11 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: openebs
+  name: longhorn
   namespace: flux-system
 spec:
   interval: 5m
-  path: "./cluster-home/operations/storage/openebs"
+  path: "./cluster-home/operations/storage/longhorn"
   prune: true
   sourceRef:
     kind: GitRepository
@@ -14,5 +14,5 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
-      name: openebs
+      name: longhorn
       namespace: storage
