--- a/cluster-home/operations/flux-system/sources/longhorn.yaml
+++ b/cluster-home/operations/flux-system/sources/longhorn.yaml
@@ -2,9 +2,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: openebs
+  name: longhorn
   namespace: flux-system
 spec:
   interval: 10m
-  url: https://openebs.github.io/openebs
+  url: https://charts.longhorn.io
   timeout: 3m
