--- a/cluster-home/operations/gtd/baikal/pvc.yaml
+++ b/cluster-home/operations/gtd/baikal/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: baikal
     app.kubernetes.io/instance: baikal
 spec:
-  storageClassName: mayastor-triple
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
@@ -26,7 +26,7 @@ metadata:
     app.kubernetes.io/name: baikal
     app.kubernetes.io/instance: baikal
 spec:
-  storageClassName: mayastor-triple
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
