--- a/cluster-home/operations/gtd/linkace-db/helmrelease.yaml
+++ b/cluster-home/operations/gtd/linkace-db/helmrelease.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: gtd
 spec:
   dependsOn:
-    - name: openebs
+    - name: longhorn
       namespace: storage
   interval: 5m
   install:
