--- a/cluster-home/operations/media/jellyseerr/helmrelease.yaml
+++ b/cluster-home/operations/media/jellyseerr/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       namespace: kube-tools
     - name: authentik
       namespace: security
-    - name: openebs
+    - name: longhorn
       namespace: storage
   interval: 5m
   install:
