--- a/cluster-home/operations/media/qbittorrent/pvc.yaml
+++ b/cluster-home/operations/media/qbittorrent/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: qbittorrent
     app.kubernetes.io/instance: qbittorrent
 spec:
-  storageClassName: mayastor-triple
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
