--- a/cluster-home/operations/media/radarr/pvc.yaml
+++ b/cluster-home/operations/media/radarr/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: radarr
     app.kubernetes.io/instance: radarr
 spec:
-  storageClassName: mayastor-triple
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
