--- a/cluster-home/operations/media/sabnzbd/pvc.yaml
+++ b/cluster-home/operations/media/sabnzbd/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: sabnzbd
     app.kubernetes.io/instance: sabnzbd
 spec:
-  storageClassName: mayastor-triple
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
