--- a/cluster-home/operations/radio/mopidy/pvc.yaml
+++ b/cluster-home/operations/radio/mopidy/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: mopidy
     app.kubernetes.io/instance: mopidy
 spec:
-  storageClassName: mayastor-triple
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
