--- a/cluster-home/operations/security/authentik/pvc.yaml
+++ b/cluster-home/operations/security/authentik/pvc.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: postgresql
     app.kubernetes.io/instance: authentik
 spec:
-  storageClassName: mayastor-triple
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
