--- a/cluster-home/operations/security/authentik/helmrelease.yaml
+++ b/cluster-home/operations/security/authentik/helmrelease.yaml
@@ -71,6 +71,7 @@ spec:
       redis:
         useAOFPersistence: "no"
     authentik:
+      bootstrap_token: ${SECRET_AUTHENTIK_BOOTSTRAP_TOKEN}
       secret_key: ${SECRET_AUTHENTIK_SECRET_KEY}
       postgresql:
         name: authentik
