Update kopia password in jobs

--- a/cluster-home/operations/storage/kopia/jobs/kopia-maintenance.yaml
+++ b/cluster-home/operations/storage/kopia/jobs/kopia-maintenance.yaml
@@ -42,7 +42,7 @@ spec:
                 - name: KOPIA_LOG_DIR
                   value: /snapshots/logs
                 - name: KOPIA_PASSWORD
-                  value: "none"
+                  value: ${SECRET_KOPIA_PASSWORD}
               command:
                 - /bin/bash
                 - -c
