--- a/cluster-home/operations/kube-tools/kyverno/policies/create-backup-jobs.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/create-backup-jobs.yaml
@@ -100,7 +100,7 @@ spec:
                           - name: KOPIA_LOG_DIR
                             value: /snapshots/{{ namespace }}/{{ claimName }}/logs
                           - name: KOPIA_PASSWORD
-                            value: "none"
+                            value: ${SECRET_KOPIA_PASSWORD}
                         command:
                           - /bin/bash
                           - -c
