--- a/cluster-home/operations/media/tdarr/pvc.yaml
+++ b/cluster-home/operations/media/tdarr/pvc.yaml
@@ -14,7 +14,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 512Mi
+      storage: 20Gi
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
