--- a/cluster-home/operations/storage/cnpg/cluster.yaml
+++ b/cluster-home/operations/storage/cnpg/cluster.yaml
@@ -17,3 +17,10 @@ spec:
         createdb: false
         passwordSecret:
           name: authentik-db-owner
+  serviceTemplates:
+    - metadata:
+        name: rw
+      spec:
+        type: LoadBalancer
+        loadBalancerIP: 10.11.0.86
+        externalTrafficPolicy: Local
