Set name for cnpg rw service

--- a/cluster-home/operations/storage/cnpg/cluster.yaml
+++ b/cluster-home/operations/storage/cnpg/cluster.yaml
@@ -21,6 +21,8 @@ spec:
       additional:
         - selectorType: rw
           serviceTemplate:
+            metadata:
+              name: buvis-pg-cluster-rw
             spec:
               type: LoadBalancer
               externalTrafficPolicy: Local
