CNPG plugin: switch to inline secret substitutions via Flux (SECRET_B2_KEY_ID/SECRET_B2_APPLICATION_KEY) for B2 creds

--- a/cluster-home/operations/storage/cnpg/cluster.yaml
+++ b/cluster-home/operations/storage/cnpg/cluster.yaml
@@ -24,9 +24,10 @@ spec:
           value: "us-west-000"
         - name: AWS_S3_FORCE_PATH_STYLE
           value: "true"
-      envFrom:
-        - secretRef:
-            name: cnpg-b2-credentials
+        - name: AWS_ACCESS_KEY_ID
+          value: ${SECRET_B2_KEY_ID}
+        - name: AWS_SECRET_ACCESS_KEY
+          value: ${SECRET_B2_APPLICATION_KEY}
   backup:
     method: plugin
     retentionPolicy: "30d"
@@ -43,9 +44,10 @@ spec:
           value: "us-west-000"
         - name: AWS_S3_FORCE_PATH_STYLE
           value: "true"
-      envFrom:
-        - secretRef:
-            name: cnpg-b2-credentials
+        - name: AWS_ACCESS_KEY_ID
+          value: ${SECRET_B2_KEY_ID}
+        - name: AWS_SECRET_ACCESS_KEY
+          value: ${SECRET_B2_APPLICATION_KEY}
 
   managed:
     roles:
