--- a/cluster-home/operations/storage/cnpg/kustomization.yaml
+++ b/cluster-home/operations/storage/cnpg/kustomization.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: storage
 resources:
   - cluster.yaml
+  - barman-inline-secret.yaml
   - authentik-secret.yaml
   - authentik-database.yaml
   - scheduled-backup.yaml
