CNPG: fix CRD schema usage: replace unsupported .spec.services with .spec.expose for LoadBalancer service

--- a/cluster-home/operations/storage/cnpg/cluster.yaml
+++ b/cluster-home/operations/storage/cnpg/cluster.yaml
@@ -31,13 +31,10 @@ spec:
         createdb: false
         passwordSecret:
           name: authentik-db-owner
-  services:
-    additional:
-      - selectorType: rw
-        serviceTemplate:
-          metadata:
-            name: buvis-pg-cluster-rw-lb
-          spec:
-            type: LoadBalancer
-            externalTrafficPolicy: Local
-            loadBalancerIP: 10.11.0.86
+  expose:
+    type: LoadBalancer
+    annotations: {}
+    loadBalancer:
+      sourceRanges: []
+      dns:
+        type: None
