--- a/cluster-home/operations/flux-system/extras/cluster-config.yaml
+++ b/cluster-home/operations/flux-system/extras/cluster-config.yaml
@@ -26,6 +26,8 @@ data:
   SVC_IP_JELLYSEERR: "10.11.0.105"
   SVC_IP_KOPIA: "10.11.0.44"
   SVC_IP_MOPIDY: "10.11.0.180"
+  SVC_IP_CNPG_RW: "10.11.0.86"
+
   SVC_IP_PROWLARR: "10.11.0.103"
   SVC_IP_SABNZBD: "10.11.0.107"
   SVC_IP_SNAPSERVER: "10.11.0.190"
