CNPG: use supported .spec.services.additional.rw service with LoadBalancerIP=; drop .spec.expose

--- a/cluster-home/operations/storage/cnpg/cluster.yaml
+++ b/cluster-home/operations/storage/cnpg/cluster.yaml
@@ -30,12 +30,10 @@ spec:
         createdb: false
         passwordSecret:
           name: authentik-db-owner
-  expose:
-    type: LoadBalancer
-    annotations: {}
-    loadBalancer:
-      sourceRanges: []
-      dns:
-        type: None
-      spec:
-        loadBalancerIP: ${SVC_IP_CNPG_RW}
+  services:
+    additional:
+      - selectorType: rw
+        serviceTemplate:
+          spec:
+            type: LoadBalancer
+            loadBalancerIP: ${SVC_IP_CNPG_RW}
