CNPG: fix validation by setting explicit string loadBalancerIP for managed RW service

--- a/cluster-home/operations/storage/cnpg/cluster.yaml
+++ b/cluster-home/operations/storage/cnpg/cluster.yaml
@@ -38,4 +38,4 @@ spec:
               name: buvis-pg-cluster-rw-lb
             spec:
               type: LoadBalancer
-              loadBalancerIP: ${SVC_IP_CNPG_RW}
+              loadBalancerIP: "10.11.0.86"
